--- a/202406teamDevelopment/src/main/resources/templates/userList.html
+++ b/202406teamDevelopment/src/main/resources/templates/userList.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ユーザー一覧</title>
-    <link rel="stylesheet" href="css/userList.css">
+    <link rel="stylesheet" href="../static/css/userList.css">
 </head>
+
 <body>
     <div id="wrapper"> <!-- 共通の処理 -->
         <header class="header">
@@ -40,4 +41,5 @@
         </footer>
     </div>
 </body>
+
 </html>
